# AdventOfCode

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  mypy.ini  pylintrc  pyproject.toml
2020/day_1/: day1.py
2020/day_2/: day2.py
2020/day_3/: day3.py
2020/day_4/: day4.py
2020/day_5/: day5.py
2020/day_6/: day6.py
aoc/: entry_point.py  logger.py  utils.py
aoc/2020/: common.py  day_01_2020.py  day_02_2020.py  day_03_2020.py  day_04_2020.py  day_05_2020.py  day_06_2020.py  day_07_2020.py  day_08_2020.py  day_09_2020.py  day_1.py  day_10.py  day_10_2020.py  day_2.py  day_3.py  day_3_2020.py  day_4.py  day_4_2020.py  day_5.py  day_5_2020.py  day_6.py  day_6_2020.py  day_7.py  day_8.py  day_8_2020.py  day_9.py  day_9_2020.py
aoc/2021/: day_01_2021.py  day_02_2021.py  day_03_2021.py  day_04_2021.py  day_05_2021.py  day_06_2021.py  day_07_2021.py  day_08_2021.py  day_09_2021.py  day_10_2021.py  day_11_2021.py  day_12_2021.py  day_13_2021.py  day_14_2021.py  day_15_2021.py  day_16_2021.py  day_17_2021.py  day_18_2021.py  day_1_2021.py  day_3_2021.py  day_4_2021.py  day_5_2021.py  day_6_2021.py  day_9_2021.py
aoc/2022/: day_01_2022.py  day_02_2022.py  day_03_2022.py  day_04_2022.py  day_05_2022.py  day_06_2022.py  day_07_2022.py  day_08_2022.py  day_09_2022.py  day_10_2022.py  day_11_2022.py  day_12_2022.py  day_13_2022.py  day_14_2022.py  day_15_2022.py  day_16_2022.py  day_test_2022.py
aoc/2023/: day_01_2023.py  day_02_2023.py
aoc/2024/: day_01_2024.py  day_02_2024.py
aoc/data/: challenges.json
tests/: test_day_01.py
(+5 files in other folders)
