[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["dequeues <dequeues@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc="aoc.entry_point:cli"
