[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["dequeues <dequeues@outlook.com>"]
packages = [
  { include = "./aoc/utils.py" }
]


[tool.poetry.dependencies]
python = "^3.10.0"
click = "^7.1.2"
Jinja2 = "^2.11.2"
pylint = "^2.12.1"
flake8 = "^4.0.1"
black = "^21.11b1"
mypy = "^0.910"
pre-commit = "^2.16.0"
numpy = "^1.21.4"
flake8-print = "^4.0.0"
loguru = "^0.5.3"
networkx = "^2.6.3"
autopep8 = "^1.6.0"
Markdown = "^3.4.1"
pandoc = "^2.3"
pandas = "^1.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc="aoc.entry_point:cli"

[tool.isort]
profile = 'black'
